tests/src/frontend/typechecking/invalid/class_generic_as_expression.sk
class C<T>() {
  fun foo(): void {
    _ = T;
  }
}
